- Fixed identation. - Removed unnecessary CSS classes. - Aligned the buttons to the center of the page. - Aligned the author to the center of the page. - Code cleanup in javascript and optimizations.

--- a/fcc-random-quote-generatorv3/css/style.css
+++ b/fcc-random-quote-generatorv3/css/style.css
@@ -43,16 +43,15 @@ blockquote {
 
 .author{
     padding-top: 20px;
-    padding-right: 210px;
     font-family: "Tafelschrift";
     color:white;
-    text-align: right;
-    right: 25%;
+    text-align: center;
 }
 
 .buttons{
     padding-top: 30px;
     width: 15%;
+    text-align: center;
     margin: 0 auto; 
 }
 
@@ -68,16 +67,6 @@ blockquote {
 
 #tweet{
     align-self: center;
-    width:64px;
-    height: 64px;
-}
-
-#twpic{
-    width:64px;
-    height: 64px;
-}
-
-#fwpic{
     width:64px;
     height: 64px;
 }
